--- a/thesis.tex
+++ b/thesis.tex
@@ -117,11 +117,34 @@ decision/.style = {base, diamond, aspect=2},
   \printbibliography
   \chapter*{致谢}
 
-  时光荏苒，岁月如梭，一转眼来到塔里木大学已经三年。在论文完稿之际，谨对在本论文撰写过程中，给予我帮助的导师和亲爱的家人表示最诚挚的感谢！%
-  首先要感谢我的导师周保平老师，高山仰止，景行行止，无论是为人还是治学，他都是我一生学习的榜样。%
-  同时也感谢白铁成老师，王德胜老师，张楠楠老师以及所有指导过我的老师们，没有你们的指导我不能顺利完成这篇论文的写作。%
-  也感谢师弟师妹王昱、王君、高浚、于晗、王城坤、杨甜甜、李家毅在生活上、实验上的帮助。%
-  最后要感谢我的家人尤其是我的妻子，正是你们的默默支持才让我可以专心完成学业。
+  时光荏苒，岁月如梭，一转眼来到塔里木大学已经三年。%
+  忆往昔，满怀对美好未来的期盼，来到了这所沙漠学府。%
+  三年如同白驹过隙，吉光片羽，恰同学少年，风华正茂；书生意气，挥斥方遒。%
+  再回首，已是而立之年，唏嘘感慨，时光不再。  
+
+  在这三年的求学生涯中，最大的收获是悟道。%
+  书山有路勤为径，学海无涯苦作舟。%
+  研究生作为科研工作者，求真务实乃是本分。%
+  吾生也有涯，而知也无涯，精力是最最重要的资源，需要分配给最最重要的事业。%
+  世界万物皆有其道，以有涯随无涯，殆已，做研究需要聚焦，从一个核心的出发点发散，所做工作皆是围绕这个点。%
+
+  在论文完稿之际，谨对在求学过程中，给予我帮助的导师和亲爱的家人表示最诚挚的感谢！%
+  首先要感谢我的导师周保平老师，高山仰止，景行行止，老师平时的言传身教、耳提面命让我受益良多，%
+  老师对我的科研生活都十分关心，提供了最大的帮助和支持，%
+  无论是为人还是治学，都是我一生学习的榜样。%
+
+  同时也要感谢白铁成老师，王德胜老师，张楠楠老师以及所有指导过我的老师们，%
+  老师们不仅对我的实验、论文都提供了不可或缺的支持和帮助，%
+  也教育了我很多人生的道理和社会的规则，%
+  没有老师们的悉心帮助指导我不可能顺利完成这篇论文的写作。%
+
+  感谢师姐李艳慧，师兄高黎明、孟文博，同门朱航飞，师弟王昱、王君、高浚、王城坤、李家毅，师妹于晗、杨甜甜，感谢所有相识在塔大的同学伙伴，%
+  与你们共同奋斗的岁月是最美好的时光，而今一别不知何时再聚，惟愿千里共婵娟，各自在祖国最需要的岗位发光发热。%
+
+  同时要感谢我的家人，尤其是我的妻子，万里求学，正是你的默默支持才让我可以专心完成学业，%
+  也感谢我的孩子，你的快乐是我最好的精神食量。%
+
+  临文涕零，不知所言。愿师长安康，同窗如意。
 
   \chapter*{作者简介}
   唐梓涯，男，汉族，出生于 1992 年 3 月 13 日，江苏省如东县人。2010 年 9 月，就读于西北农林科技大学植物保护学院，植物保护专业。2014 年 6 月获得农学学士学位。2019 年 9 月，考入塔里木大学信息工程学院，农业电气化与自动化专业，攻读工学硕士学位。
