--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,21 +1,21 @@
 \chapter{结论}
-本文详细描述了棉花生长模型 Cotton2K，%
-修改了模型的源码以修复一些问题，增加更为详细的冠层子模块，%
-以 2019 年至 2020 年的田间试验为基础，%
-先通过全局敏感性分析方法对模型的品种参数进行分析，%
+\section{结论}
+
+本文 Cotton2K 源码被修改加入更细节的分层冠层子模块，经实验验证，这样的修改有助于提高模型的模拟精度。%
+与其他模型，如 CSM-Cropgro-Cotton 和 OZCOT 相比，Cotton2K模型的模拟精度仍有很大的提升空间。%
+造成这样的原因可能有很多，例如模型的复杂性，具体内容仍有待进一步研究。%
+模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，%
+试验中实测地上总生物量随灌水量增长的趋势与模拟一致，而籽棉产量在灌水增加到。%
+这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
+
+\section{创新点}
+本文详细描述了棉花生长模型 Cotton2K，修改了模型的源码以修复一些问题，增加更为详细的冠层子模块，%
+以 2019 年至 2020 年的田间试验为基础，先通过全局敏感性分析方法对模型的品种参数进行分析，%
 综合考量选取其中部分品种参数采用 NSGA-III 多目标优化算法进行优化，%
 对模拟结果与实测数据进行分析，进而评估了模型的修改对研究区域棉花的模拟精度的影响。%
-总的来说，在该模型对棉花生育早期特别是现蕾以前模拟的精度很高，随着器官的分化，棉花的生长发育机理变得越来越复杂，模拟的精度有所下降。%
+总的来说，在该模型对棉花生育早期特别是现蕾以前模拟的精度很高，随着器官的分化，%
+棉花的生长发育机理变得越来越复杂，模拟的精度有所下降。%
 但对于这样一个复杂的过程，模型在经过冠层光能截获率的修改后所能达到的结果是可以接受的。%
-
-\section{主要结论}
-
-本文 Cotton2K 源码被修改加入更细节的分层冠层子模块。%
-事实证明，这样的修改有助于提高模型的模拟精度。
-与其他模型，如 CSM-Cropgro-Cotton 和 OZCOT 相比，Cotton2K模型的模拟精度仍有很大的提升空间。%
-这可能是由于多种原因引起的。%
-模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，这与实际测量结果相当。%
-这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
 
 \section{存在的问题与下一步工作}
 
