REFACTOR: enumerate label

--- a/intro.tex
+++ b/intro.tex
@@ -249,7 +249,7 @@ Cotton2K 在这个方面亟待改进。
 \section{研究内容和技术路线}
 
 \subsection{研究内容}
-\begin{enumerate}
+\begin{enumerate}[label=（\arabic*）]
     \item 对 Cotton2K 模型进行修改\\%
           参考 WOFOST-GTC 模型，将 Cotton2K 模型的冠层子模块修改为自上而下的层级结构，每层为 5 cm 高，共 20 层，分层对冠层的光合作用和干物质分配等生理过程进行模拟。%
           同时也修正部分原版模型的错误，例如浮点数计算溢出、干重模拟值为负值等。
