--- a/method.tex
+++ b/method.tex
@@ -78,7 +78,7 @@ $N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
 取样测量土壤田间持水率、容积密度、枯萎点含水率、饱和土壤含水率和渗透系数等参数，并记录好灌溉日期与灌溉量；
 \subsection{棉花生理指标}
 试验记录内容主要包括:
-\begin{enumerate}
+\begin{enumerate}[label=（\arabic*）]
     \item 生育期：记录棉花播种、出苗、现蕾、开花和吐絮期等生育期；
     \item 株式图：每 10 天记录株高、叶片数、果枝数、果枝长度、果枝高度、蕾、花、小铃、大铃及吐絮铃个数与部位等；
     \item 叶面积指数：每 10 天结合干物质测定，取全株叶片，用扫描法测定冠层垂直方向 20 个深度和水平 8 个网格的叶面积指数；
@@ -121,7 +121,7 @@ Sobol 序列是一个应用广泛的准随机 (quasi-random) 低差值序列，%
 生成的输入样本有 $N * (2D + 2)$ 条，其中 $N$ 为采样数， $D$ 是参数的数量。参见算法\ref{alg:sobol}。
 
 Sobol 序列的一般特征有
-\begin{enumerate}
+\begin{enumerate}[label=（\arabic*）]
     \item Sobol 序列是一种低差异的序列，也被称为 “准随机序列”。
     \item 比伪随机数的分布更均匀
     \item 准蒙特卡洛积分产生更快的收敛性和更好的准确性
@@ -187,7 +187,7 @@ Sobol 序列的一般特征有
 Sobol 敏感性分析一般用于复杂的系统模型，它将输出方差与其资源进行定量分解：即来自单个参数或来自参数间的相互作用。%
 全局敏感性指数通常用于评估一个参数的总体贡献以及与其他参数的相互作用。%
 Sobol 敏感性指数有几个特点:
-\begin{enumerate}
+\begin{enumerate}[label=（\arabic*）]
     \item 全局/一阶/二阶敏感性指数为正值。
     \item 敏感性指数大于0.05的参数被认为是显著的。
     \item 所有敏感指数之和应等于1。
