--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@
 南疆地区棉田中的残留塑料薄膜污染已经成为棘手的问题。%
 而无膜栽培技术是解决这个问题的有效手段。%
 中国工程院院士喻树迅团队在 2017 年于阿克苏地区沙雅县成功培育出亩产 320{-}350 公斤的 “中棉 619” 早熟品种，对减少新疆棉田残膜对生态环境和原棉的污染意义重大。%
-本研究采用棉花生长模拟系统，定量评价了灌溉管理对非绒毛棉生长发育和产量的影响。%
+本研究采用棉花生长模拟系统，定量评价了灌溉管理对无膜栽培棉花生长发育和产量的影响。%
 有效光合叶面积指数发芽后集中在冠层的底部，成熟期集中在顶部，而花期属于均匀分布，%
 本文将借鉴成熟的棉花生长模型理论，集中解决有效光合叶面积指数不同发育阶段在棉花冠层分布不一致的问题，提高光能截获和光合作用模拟精度。
 将参考Cotton2K模型作为基本理论模型，对其冠层子模型中进行修改，并利用在2019年和2020年的两个棉花生长季节的田间实验数据进行标定。
