REFACTOR: super script trade mark

--- a/method.tex
+++ b/method.tex
@@ -73,7 +73,7 @@ $N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
 \subsection{土壤参数}
 每周取样测定一次土壤容积含水量（4 $\times$ 3 网格），另外，使用矫正后的土壤水分和温度自动记录仪 (HOBO H21-002, United States) 分 5 层实时监测 0-100cm 深度的土壤水分含量；
 
-土壤温度由 Thermochron® iButton®器件(DS1921G) 收集，设置取样间隔为 2 小时，将传感器埋于各处理区中心紧挨棉花种植行的位置，埋深为 5 cm、10 cm、20 cm、40 cm、50 cm。
+土壤温度由 Thermochron$^®$ iButton$^®$器件(DS1921G) 收集，设置取样间隔为 2 小时，将传感器埋于各处理区中心紧挨棉花种植行的位置，埋深为 5 cm、10 cm、20 cm、40 cm、50 cm。
 
 取样测量土壤田间持水率、容积密度、枯萎点含水率、饱和土壤含水率和渗透系数等参数，并记录好灌溉日期与灌溉量；
 \subsection{棉花生理指标}
