FIX: reference index start with 2

--- a/abstract.tex
+++ b/abstract.tex
@@ -70,7 +70,7 @@ Stem weight goes negative in the simulation with original model because leaf gro
 and absence of validation for positive weights.
 Simulated LAI is mostly overestimated when measured LAI is greater than 1.5 $\mathrm{m^2 m^{-2}}$ and underestimated
 for LAI less than 1.5 $\mathrm{m^2 m^{-2}}$ when using original LI method, the behavior is similar to that
-\authoryearcite{thorp2019} reported.
+Thorp \textit{et al.} (2019) reported.
 The NRMSE of LAI reduced from 65.88\% to 31.99\% after switch to modified LI method, and it slightly underestimated for
 most situation, and dispersion show signs of increasing while $\mathrm{LAI > 3\ m^2 m^{-2}}$.
 Therefore, the model has weak ability for responding to plant growth conditions under full irrigation, as it claimed
