ADD: acknowledgement to Marani & Thorp & compag

--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@
 \end{doublespace}
 \begin{spacing}{\fpeval{25 / (10.5 * 1.2)}}\zihao{5}
 南疆地区棉田中的残留塑料薄膜污染已经成为棘手的问题。%
-而无膜栽培技术是解决这个问题的有效手段。%
+而棉花的无膜栽培技术可以从根本上解决这个问题。%
 中国工程院院士喻树迅团队在 2017 年于阿克苏地区沙雅县成功培育出亩产 320{-}350 公斤的 “中棉 619” 早熟品种，对减少新疆棉田残膜对生态环境和原棉的污染意义重大。%
 本研究采用棉花生长模拟系统，定量评价了灌溉管理对无膜栽培棉花生长发育和产量的影响。%
 有效光合叶面积指数发芽后集中在冠层的底部，成熟期集中在顶部，而花期属于均匀分布，%
