SUBMIT: final version

--- a/model.tex
+++ b/model.tex
@@ -120,3 +120,5 @@ $P_{agei}$ 叶龄校正因子。
 
 \section{本章小结}
 本章首先对获取的 Cotton2K 模型源码进行了修改，改进了模型的输入与输出格式，修正了部分计算问题，优化了模型的运行效率，移除了与 Windows 平台的绑定，最终增加了一个更为详细的分层模拟的冠层子模块。
+
+Cotton2K 的原作者 Avishalom Marani 教授在近日给软件增加了 GPL 开源协议，依据该协议，修改的 Cotton2K 代码可以在 https://github.com/tcztzy/cotton2k 自由获取。
