--- a/sa.tex
+++ b/sa.tex
@@ -23,7 +23,8 @@
     取值范围根据 GOSSYM 模型和 WOFOST 模型中相关的参数范围扩大 100\% 而得，为 -1.6 至 0。
     \begin{table}
         \caption{原版 Cotton2K 参数列表及取值范围}\label{tab:saParameters}
-        \small
+        \tiny
+        \centering
         \begin{tabular}{llrr|llrr}
             \toprule
             参数     & 功能描述             & 下限  & 上限  & 参数     & 功能描述                   & 下限   & 上限   \\
