--- a/thesis.tex
+++ b/thesis.tex
@@ -182,4 +182,5 @@ decision/.style = {base, diamond, aspect=2},
     \item 2021 年第十二届蓝桥杯全国软件和信息技术专业人才大赛 Python 组全国总决赛三等奖。
   \end{enumerate}
 \end{spacing}
+\includepdf{backcover.pdf}
 \end{document}
